--- a/glossary/V8.md
+++ b/glossary/V8.md
@@ -1,6 +1,6 @@
 # V8
 
-[V8](https://code.google.com/p/v8/) is Google's open source, high performance JavaScript engine. It is written in C++ and is used in Google Chrome and other projects.
+[V8](https://code.google.com/p/v8/) is Google’s open source, high performance JavaScript engine. It is written in C++ and is used in Google Chrome and other projects.
 
 V8 compiles and executes JavaScript source code, handles memory allocation for objects, and garbage collects objects it no longer needs.
 
