Performed a lot of minor improvements

--- a/glossary/V8.md
+++ b/glossary/V8.md
@@ -4,4 +4,4 @@
 
 V8 compiles and executes JavaScript source code, handles memory allocation for objects, and garbage collects objects it no longer needs.
 
-Check out the [Github repo](https://github.com/v8/v8/wiki) for more information.
+Check out the [Github repository](https://github.com/v8/v8/wiki) for more information.
